# ETIA

./: .gitignore  .readthedocs.yml  MANIFEST.in  Makefile  README.md  generate_docs.sh  pyproject.toml  requirements.txt  setup.py
ETIA/: __init__.py
ETIA/AFS/: AFS.py  __init__.py  dataset_target_71ae3e50-09d4-4b33-b8e6-342a81bdb735_fold3_bb80d48a-becd-462e-8d61-7bae8eb4271a.csv  feature_selector.py  oos.py  predictive_configurator.py  predictive_model.py  preprocessor.py
ETIA/CRV/: __init__.py
ETIA/CausalLearning/: CausalLearner.py  __init__.py  test.py
demos/: conf.json  demo.py
docs/: CRV.queries.rst  CRV.utils.rst  CausalLearning.CDHPO.OCT.causal_graph_utils.rst  CausalLearning.CausalModel.rst  CausalLearning.algorithms.causalnex_algorithm.rst  CausalLearning.algorithms.rst  CausalLearning.algorithms.tigramite_algorithm.rst  CausalLearning.configurations.rst  CausalLearning.model_validation_protocols.kfold.rst  CausalLearning.util.rst  CausalLearning.utils.rst  ETIA.rst  Use Cases.rst  build.lib.CausalLearning.algorithms.cdt_algorithms.rst  build.lib.CausalLearning.algorithms.tigramite_algorithm.rst  build.lib.CausalLearning.util.rst  build.lib.data.rst  build.lib.util.rst  build.rst  conf.py  data.rst  index.rst  util.oct_functions.rst
documentation/: .readthedocs.yml  generate_docs.sh
experiments/: 1_import_csv.py  2_AFS.py  3_CL.py  4_bootstrap.py  4_metrics_bootstrap.py  afs_plots.py  cl_plots.py  data_functions.py
tests/: AFS_Tests.py  CL_Tests.py  afs_demo.py  demo.py  test.py  test_CausalLearner.py  test_afs.py  test_causal_learner.py
(+640 files in other folders)
