[tool.poetry]
name = "etia"
version = "1.0.1"
description = "Automated Causal Discovery Library"
authors = ["MensXMachina Lab, Comp. Science Department, University of Crete",
            "Antonios Ntroumpogiannis",
            "Konstantina Biza"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6"
causalnex = ">=0.12.1"
cdt = ">=0.6.0"
joblib = ">=1.2.0"
jpype1 = ">=1.5.0"
networkx = ">=3.2.1"
numpy = ">=1.22.4"
pandas = ">=1.4.2"
pgmpy = ">=0.1.19"
py4cytoscape = ">=1.5.0"
pywhy-graphs = ">=0.1.0"
scikit-learn = ">=1.4.1.post1"
scipy = ">=1.11.4"
tigramite = ">=5.2.3.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
